test/errors/nullability/null_safe_array_nonnullable_fail.hy
int main()
{
    string[] names = ["one"]
    string? first = names?[0]
    return 0
}